# project1_Matesheva_Anastasia_dpo

./: Makefile  README.md  pyproject.toml  rec_file
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
